<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>autosaveworld</groupId>
    <artifactId>AutoSaveWorld</artifactId>
    <version>4.15</version>
    <description>Multifunctional plugin to manage server easier</description>

    <repositories>
        <repository>
            <id>jitpack.io</id>
            <url>https://jitpack.io</url>
        </repository>
        <repository>
            <id>spigot-repo</id>
            <url>https://hub.spigotmc.org/nexus/content/repositories/snapshots/</url>
        </repository>
        <repository>
            <id>enginehub-maven</id>
            <url>https://maven.enginehub.org/repo/</url>
        </repository>
        <repository>
            <id>vault-repo</id>
            <url>http://nexus.hc.to/content/repositories/pub_releases</url>
        </repository>
        <repository>
            <id>essentialsx-repo</id>
            <url>https://ci.ender.zone/plugin/repository/everything/</url>
        </repository>
    </repositories>

    <dependencies>
        <!-- zlibs -->
        <dependency>
            <groupId>com.dropbox.core</groupId>
            <artifactId>dropbox-core-sdk</artifactId>
            <version>3.1.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.api-client</groupId>
            <artifactId>google-api-client</artifactId>
            <version>1.30.7</version>
        </dependency>
        <dependency>
            <groupId>com.google.apis</groupId>
            <artifactId>google-api-services-drive</artifactId>
            <version>v3-rev20191108-1.30.3</version>
        </dependency>
        <dependency>
            <groupId>com.google.auth</groupId>
            <artifactId>google-auth-library-oauth2-http</artifactId>
            <version>0.19.0</version>
        </dependency>
        <dependency>
            <groupId>com.jcraft</groupId>
            <artifactId>jsch</artifactId>
            <version>0.1.55</version>
        </dependency>
        <dependency>
            <groupId>commons-net</groupId>
            <artifactId>commons-net</artifactId>
            <version>3.6</version>
        </dependency>

        <!-- spigot api -->
        <dependency>
            <groupId>org.spigotmc</groupId>
            <artifactId>spigot-api</artifactId>
            <version>1.14.4-R0.1-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>

        <!-- available dependency -->
        <dependency>
            <groupId>com.sk89q.worldedit</groupId>
            <artifactId>worldedit-bukkit</artifactId>
            <version>7.0.0-SNAPSHOT</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.sk89q.worldguard</groupId>
            <artifactId>worldguard-bukkit</artifactId>
            <version>7.0.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.milkbowl.vault</groupId>
            <artifactId>Vault</artifactId>
            <version>1.7.3</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>net.ess3</groupId>
            <artifactId>EssentialsX</artifactId>
            <version>2.17.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.griefcraft.lwc</groupId>
            <artifactId>LWCX</artifactId>
            <version>2.2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.griefcraft.lwc</groupId>
            <artifactId>LWCX</artifactId>
            <version>2.2.0</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.TechFortress</groupId>
            <artifactId>GriefPrevention</artifactId>
            <version>16.7.1</version>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>com.github.GroupManager</groupId>
            <artifactId>GroupManager</artifactId>
            <version>v0.2.0</version>
            <scope>provided</scope>
        </dependency>

        <!-- unavailable libs in maven repo -->
        <dependency>
            <groupId>paperspigot</groupId>
            <artifactId>PaperSpigot</artifactId>
            <version>1.0</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/paperspigot.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.massivecraft.massivecore</groupId>
            <artifactId>MassiveCore</artifactId>
            <version>3.2.3</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/MassiveCore.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.massivecraft.factions</groupId>
            <artifactId>Factions</artifactId>
            <version>3.2.3</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/Factions.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>net.sacredlabyrinth.Phaed</groupId>
            <artifactId>PreciousStones</artifactId>
            <version>9.5.5</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/PreciousStones.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.bekvon.bukkit.residence</groupId>
            <artifactId>Residence</artifactId>
            <version>4.8.8.2</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/Residence.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>com.palmergames.bukkit.towny</groupId>
            <artifactId>Towny</artifactId>
            <version>0.95.2.2</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/Towny.jar</systemPath>
        </dependency>
        <dependency>
            <groupId>io.github.mywarp.mywarp</groupId>
            <artifactId>MyWarp</artifactId>
            <version>3.1</version>
            <scope>system</scope>
            <systemPath>${basedir}/libs/MyWarp.jar</systemPath>
        </dependency>
    </dependencies>

    <build>
        <resources>
            <resource>
                <targetPath>.</targetPath>
                <filtering>true</filtering>
                <directory>src/main/resources/</directory>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-jar-plugin</artifactId>
                <version>3.1.1</version>
                <configuration>
                    <finalName>${project.name}</finalName>
                    <archive>
                        <manifest>
                            <addDefaultImplementationEntries>true</addDefaultImplementationEntries>
                            <addDefaultSpecificationEntries>true</addDefaultSpecificationEntries>
                        </manifest>
                    </archive>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.8.0</version>
                <configuration>
                    <target>${java.version}</target>
                    <source>${java.version}</source>
                    <encoding>UTF-8</encoding>
                    <useIncrementalCompilation>false</useIncrementalCompilation>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-shade-plugin</artifactId>
                <version>3.2.3</version>
                <executions>
                    <execution>
                        <phase>package</phase>
                        <goals>
                            <goal>shade</goal>
                        </goals>
                        <configuration>
                            <relocations>
                                <relocation>
                                    <pattern>com.dropbox</pattern>
                                    <shadedPattern>autosaveworld.zlibs.com.dropbox</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.fasterxml</pattern>
                                    <shadedPattern>autosaveworld.zlibs.com.fasterxml</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.google</pattern>
                                    <shadedPattern>autosaveworld.zlibs.com.google</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>com.jcraft</pattern>
                                    <shadedPattern>autosaveworld.zlibs.com.jcraft</shadedPattern>
                                </relocation>
                                <relocation>
                                    <pattern>org.apache.commons.net</pattern>
                                    <shadedPattern>autosaveworld.zlibs.org.apache.commons.net</shadedPattern>
                                </relocation>
                            </relocations>
                        </configuration>
                    </execution>
                </executions>
            </plugin>
        </plugins>
    </build>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <java.version>10</java.version>
    </properties>
</project>